# andon-light

./: .env  .envrc  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: markdown-lint.yml  rust-ci.yml  rust_ci.yml
3d-models/: readme.md
3d-models/01 tower/: tower.3mf  tower.stl
3d-models/01-tower/: tower.prusa-slicer-project.3mf
3d-models/02 plug/: plug.stl
3d-models/02-plug/: plug.3mf
3d-models/03-hood/: hood.prusa-slicer-project.3mf
3d-models/04-cap/: cap.prusa-slicer-project.3mf
3d-models/05-shell/: shell.3mf  shell.prusa-slicer-project.3mf
3d-models/06-bottom-cap/: bottom-cap.3mf  bottom-cap.prusa-slicer-project.3mf  bottom-cap.stl
3d-models/07-doughnut/: half_with_hold.3mf  half_with_hold.prusa-slicer-project.3mf  half_with_hold.stl
3d-models/bottom-cap/: bottom cap.3mf  bottom cap.step  bottom-cap.stl
3d-models/cap/: cap.3mf  cap.step  cap.stl
3d-models/doughnut/: half-with-hold.step  half.3mf  half.step  half.stl  jam.3mf  jam.step  jam.stl
3d-models/hood/: hood.3mf  hood.step  hood.stl
3d-models/junction-box/: junction-box-bottom.3mf  junction-box-bottom.stl  junction-box-holder.3mf  junction-box-holder.step  junction-box-holder.stl  junction-box-nut.3mf  junction-box-nut.stl  junction-box-top.3mf  junction-box-top.stl  junction-box.step
3d-models/shell/: shell.step  shell.stl
3d-models/tower/: tower.step
andon-light-core/: Cargo.toml  README.md
andon-light-core/src/: lib.rs
andon-macros/: Cargo.toml
andon-macros/src/: lib.rs
app/: Cargo.toml  build.rs  partitions.csv
app/.cargo/: config.toml
app/src/: lib.rs
core/: Cargo.toml
core/andon-light-core/: Cargo.toml  colors.xcf
core/andon-light-core/src/: colors.rs  lib.rs
core/andon-light-core/tests/: test_colors.rs
core/andon-light-macros/: Cargo.toml  build.rs
core/andon-light-macros/src/: lib.rs
devbin/: flash-partitions  flash_partitions  run-tests  show_current_partitions
docs/: andon.diy  parts.md  wiring.diy
src/: common.rs  core.rs  lib.rs  main.rs  prelude.rs
