[package]
name = "andon-light"
version = "0.1.0"
authors = ["Szczepan Cieślik"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.215", default-features = false }
esp-backtrace = { version = "0.14.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.20.1", features = ["esp32c3", "async"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = [
  "esp32c3",
  "phy-enable-usb",
  "utils",
  "wifi",
] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-time = "0.3.1"
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp-hal-embassy = { version = "0.3.0", features = [
  "esp32c3",
  "integrated-timers",
  "log",
] }
static_cell = "2.1.0"
embedded-hal-async = "1.0.0"
serde-json-core = "0.6.0"
embassy-sync = "0.6.0"
embassy-embedded-hal = "0.2.0"
embedded-hal = "1.0.0"
andon-light-core = { path = "./andon-light-core/" }
embedded-sdmmc = "0.8.1"
embedded-hal-bus = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
