[package]
edition = "2021"
name = "andon-light"
version = "0.1.0"

[[bin]]
name = "andon-light"
path = "./src/bin/main.rs"
test = false

[dependencies]
esp-alloc = { version = "0.9.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-rc.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "socket-dhcpv4",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["arch-riscv32", "log"] }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
heapless = { version = "^0.9", default-features = false }
static_cell = { version = "2.1.1" }
andon-light-core = { path = "../core/andon-light-core/" }
andon-light-macros = { path = "../core/andon-light-macros/" }
embassy-sync = { version = "0.7.2", features = ["log"] }
embedded-hal-async = "1.0.0"
embedded-sdmmc = "0.8.1"
embedded-hal = "1.0.0"
serde = { version = "1.0.219", default-features = false }
serde-json-core = { version = "0.6.0", features = ["custom-error-messages"] }
embedded-hal-bus = "0.3.0"
tcs3472 = { version = "1.0.0", features = ["async"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3", "log-04"] }
esp-rtos = { version = "0.1.1", features = [
  "esp32c3",
  "embassy",
  "esp-radio",
  "esp-alloc",
] }
embassy-embedded-hal = "0.5.0"
embassy-net = { version = "0.7.1", features = ["medium-ip", "proto-ipv4"] }
esp-radio = { version = "0.16.0", features = [
  "esp32c3",
  "wifi",
  "smoltcp",
  "unstable",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
